-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.0.0
-
None
-
Archlinux with git Qt5.
-
3dbd381e039818e4021b33533dbfdab1419510e1
When long press a key, in spite of the first one, following key event doesn't trigger x11FilterEvent.
Tested with ibus context and my own platform context. QPlatformInputContext::filterEvent is not affected.
For Gerrit Dashboard: QTBUG-25795 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
29452,2 | Also use x11FilterEvent for auto repeat key in xcb. | master | qt/qtbase | Status: MERGED | +2 | 0 |